modified:   ../../C-Sharp/rest-client/appsettings.json 	modified:   ../../C-Sharp/sdk-client/appsettings.json 	modified:   ../rest-client/.env 	modified:   .env

--- a/Labfiles/01-use-azure-ai-services/Python/rest-client/.env
+++ b/Labfiles/01-use-azure-ai-services/Python/rest-client/.env
@@ -1,2 +1,2 @@
-AI_SERVICE_ENDPOINT=YOUR_AI_SERVICES_ENDPOINT
-AI_SERVICE_KEY=YOUR_AI_SERVICES_KEY
+AI_SERVICE_ENDPOINT=https://azureai-chuanqi.cognitiveservices.azure.com/
+AI_SERVICE_KEY=e3c268582a9d4cbf971f4de1a95d7c02
