--- a/Labfiles/01-use-azure-ai-services/C-Sharp/sdk-client/appsettings.json
+++ b/Labfiles/01-use-azure-ai-services/C-Sharp/sdk-client/appsettings.json
@@ -1,4 +1,4 @@
 {
-    "AIServicesEndpoint": "YOUR_AI_SERVICES_ENDPOINT",
-    "AIServicesKey": "YOUR_AI_SERVICES_KEY"
+    "AIServicesEndpoint": "https://azureai-chuanqi.cognitiveservices.azure.com/",
+    "AIServicesKey": "e3c268582a9d4cbf971f4de1a95d7c02"
 }
